# 3d-audio-mixer

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.zed/: debug.json
dependencies/ImGuiFileBrowser/: ImFileBrowser.h
dependencies/glad/: glad.h
src/: glad.c  main.cc
src/3d_audio_mixer/app/: application.cc  application.hh  main.cc  pch.h
src/3d_audio_mixer/audio/: audio_context.cc  audio_context.hh  audio_system.cc  audio_system.hh
src/3d_audio_mixer/elements/: camera.hh  element.hh  grid.hh  input.hh  listener.hh  sound_node.hh
src/3d_audio_mixer/render/: opengl_buffer_manager.cc  opengl_buffer_manager.hh  opengl_context.cc  opengl_context.hh  render_base.hh  ui_context.cc  ui_context.hh
src/3d_audio_mixer/shader/: shader.cc  shader.hh
src/3d_audio_mixer/ui/: menu_panel.cc  menu_panel.hh  node_info.cc  node_info.hh  scene_view.cc  scene_view.hh  timeline_panel.cc  timeline_panel.hh
src/3d_audio_mixer/utils/: file_io.hh  scene_loader.hh  services.hh
src/3d_audio_mixer/window/: iwindow.hh  window.cc  window.hh
src/shaders/: node_frag.shader  node_vert.shader
tests/: dummy.json
tests/elements/: test_camera.cc  test_listener.cc
tests/scene/: test_scene_loader.cc
tests/sound/: test_audio_context.cc  test_audio_system.cc  test_sound_node.cc
tests/ui/: test_ui_logic.cc
